--- a/BamboraSDK/Bambora.NA.SDK.csproj
+++ b/BamboraSDK/Bambora.NA.SDK.csproj
@@ -12,7 +12,7 @@
     <Authors>Bambora (North America), Inc.</Authors>
     <PackageProjectUrl>https://github.com/bambora-na/bambora-na-dotnet</PackageProjectUrl>
     <PackageIconUrl></PackageIconUrl>
-    <PackageLicenseUrl>https://github.com/bambora-na/bambora-na-dotnet/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicense>https://github.com/bambora-na/bambora-na-dotnet/blob/master/LICENSE</PackageLicense>
     <Version>2.1.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
@@ -23,7 +23,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
